--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:toyinariyo66@gmail.com">email</a></li>
+			<li><a href="https://toyinariyo.itch.io">itchio</a></li>
         		<li><a href="https://twitter.com/toyinariyo66">twitter</a></li>
 			</ul>
 		</footer>
