--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ ul.posts li {
     list-style: none;
 }
 /* CV */
-.CV { margin: 0px 0px 60px; }
-.CV h1 { font-size: 3em; }
-.CV h2 { font-size: 2em; }
-.CV .download { float: right; font-size: .8em; text-transform: uppercase; }
+.cv { margin: 0px 0px 60px; }
+.cv h1 { font-size: 3em; }
+.cv h2 { font-size: 2em; }
+.cv .download { float: right; font-size: .8em; text-transform: uppercase; }
