--- a/css/main.css
+++ b/css/main.css
@@ -45,4 +45,5 @@ ul.posts li {
 .cv { margin: 0px 0px 60px; }
 .cv h1 { font-size: 3em; }
 .cv h2 { font-size: 2em; }
+.cv .download { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 .cv .download { float: right; font-size: .8em; text-transform: uppercase; }
