--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     		<ul>
         		<li><a href="mailto:toyinariyo66@gmail.com">email</a></li>
 			<li><a href="https://toyinariyo.itch.io">itchio</a></li>
+			<li><a href="https://www.linkedin.com/in/oluwatoyin-ariyo-8b4278199/">linkedin</a></li>
         		<li><a href="https://twitter.com/toyinariyo66">twitter</a></li>
 			</ul>
 		</footer>
