Added Mastodon to footer links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
 			<li><a href="https://toyinariyo.itch.io">itchio</a></li>
 			<li><a href="https://www.instagram.com/t_ariyo/">instagram</a></li>
 			<li><a href="https://www.linkedin.com/in/oluwatoyin-ariyo-8b4278199/">linkedin</a></li>
+			<li><a href="https://mastodon.social/@oltoycoder">mastodon</a></li>
         		<li><a href="https://twitter.com/toyinariyo66">twitter</a></li>
 			</ul>
 		</footer>
